--- a/.editorconfig
+++ b/.editorconfig
@@ -3,9 +3,7 @@ root = true
 [*]
 indent_style = space
 charset = utf-8
-# invalid to avoid IntelliJ headache
-# this project has mixed lines by historical reason
-# so uses IDE settings (LF at new text only)
+# using IDE settings to keep existing files (to avoid big differences)
 #end_of_line = lf
 
 [*.{html,xml,css}]
